# trillium-mcp

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yaml
.githooks/: pre-commit
.github/workflows/: render-diagrams.yml
app/: pyproject.toml  server.py
app/tests/: test_live_integration.py  test_middleware.py
app/tests/live/: _client.py  test_attachments.py  test_branches.py  test_notes.py  test_revisions.py
docs/: architecture.puml  sequence-overview.puml  sequence.puml  theme.iuml
docs/superpowers/plans/: 2026-07-08-trilium-mcp-token-passthrough.md
docs/superpowers/specs/: 2026-07-08-trilium-mcp-token-passthrough-design.md
